# DomoticzSuez

./: .flake8  .pylintrc  Makefile  README.md  fakeDomoticz.py  plugin.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
