[tool.poetry]
name = "DomoticzSuez"
version = "1.0.6"
description = "Domoticz plugin that grabs data from French water meter."
authors = ["yed30"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pylint = "^2.6.0"
flake8 = "^3.8.4"